<resources>
    <string name="app_name">Trip Ease</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="signup">SIGN UP</string>
    <string name="login">LOGIN</string>

    <string name="index_heading1">HELLO,</string>
    <string name="index_heading2">WELCOME BACK TO</string>
    <string name="index_heading3">TRIP-EASE</string>

    <string name="signup_heading1">Hello,</string>
    <string name="signup_heading2">Please Sign</string>
    <string name="signup_heading3">Up</string>

    <string name="login_heading1">Hello,</string>
    <string name="login_heading2">Please Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>

    <string name="login_with_google">Login with Google</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_your_message">Write your message</string>

    <string name="firstname_profilepage">First Name</string>
    <string name="update_profile_photo_text">Update Profile</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="delete_user">Delete User</string>
    <string name="log_out">Log Out</string>

</resources>