<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".SignUpPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:id="@+id/topbackground_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp">

            <ImageView
                android:id="@+id/signuppage_topbackground"
                android:src="@drawable/top_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:id="@+id/back_button_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <Button
                    android:id="@+id/back_button_signuppage"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/ic_arrow_back_black"
                    android:backgroundTint="@color/black"
                    android:tint="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/signuppage_top_heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/back_button_container"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/signup_heading1"
                android:textColor="#000000"
                android:textSize="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp" />

            <TextView
                android:id="@+id/signuppage_top_heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signuppage_top_heading1"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/signup_heading2"
                android:textColor="#000000"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:id="@+id/signuppage_top_heading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signuppage_top_heading2"
                android:layout_marginStart="@dimen/_30sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/signup_heading3"
                android:textColor="#000000"
                android:textSize="@dimen/_20sdp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_12sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstname_edittext_signuppage"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/poppins_light"
                    android:maxLength="16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_9sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_7sdp"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastname_edittext_signuppage"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/poppins_light"
                    android:maxLength="16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_9sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_7sdp"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edittext_signuppage"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/poppins_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_9sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_7sdp"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edittext_signuppage"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_light"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_9sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_7sdp"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signup_button_signuppage"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/signup"
                android:background="@drawable/rounded_button"
                android:textColor="#EEEEEE"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_65sdp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
