<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EEEEEE"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ADB5"
        android:padding="10dp"
        android:id="@+id/toolbar">

        <TextView
            android:id="@+id/toolbar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_bold"
            android:text="Profile"
            android:layout_marginStart="@dimen/_20sdp"
            android:textColor="#222831"
            android:textSize="@dimen/_20sdp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">

            <ImageView
                android:id="@+id/profilePhoto"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/baseline_account_circle_24"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/firstname_textview_profile"
                android:text="@string/firstname_profilepage"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/profilePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstname_textview_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="@dimen/_5sdp">
                <!-- Add content for this CardView -->
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPendingFriendRequests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardUpdateProfile"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="@dimen/_5sdp">
                <!-- Add content for this CardView -->
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAboutUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardPendingFriendRequests"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/aboutus_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="@dimen/_18sdp"
                        android:padding="@dimen/_15sdp"
                        android:layout_centerVertical="true" />

                    <ImageButton
                        android:id="@+id/aboutus_rightbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/right_button_24px" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardContactUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardAboutUs"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/contactus_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_us"
                        android:fontFamily="@font/montserrat_semibold"
                        android:textSize="@dimen/_18sdp"
                        android:padding="@dimen/_15sdp"
                        android:layout_centerVertical="true" />

                    <ImageButton
                        android:id="@+id/contactus_rightbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/right_button_24px" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardContactUs"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_centerHorizontal="true"
                android:padding="10dp">

                <Button
                    android:id="@+id/delete_user_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/red_button_background"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#FFFFFF"
                    android:text="@string/delete_user"
                    android:textSize="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_6sdp" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/delete_user_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/red_button_background"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#FFFFFF"
                    android:text="@string/log_out"
                    android:textSize="@dimen/_15sdp"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_6sdp" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
